# lab1AiCD

./: .gitignore  CMakeLists.txt  Makefile  README.md
lab01/: Makefile  README.md  main.c  report.md  tests.c
lab02/: Makefile  README.md  input.txt  main.c  report.md  tests.c
tests/: run_tests.ps1
tests/lab01/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt  input2.txt  input3.txt  input4.txt
tests/lab02/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
